# fmod_player

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/spirifoxy/com/github/fmod_player/: FMODPlayerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/spirifoxy/com/github/fmod_player_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: fmod_player.podspec  native_loop.podspec
ios/Classes/: FMODPlayerPlugin.h  FMODPlayerPlugin.m  SwiftFMODPlayerPlugin.swift  common.c  common.cpp  common.h  fmod_player.c  fmod_player.cpp  native_player.cpp  native_player.h  native_player.hpp
lib/: exceptions.dart  fmod_player.dart  util.dart
test/: native_loop_test.dart
